--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "varu",
+  "name": "varucli",
   "version": "0.0.1",
   "type": "module",
   "description": "Dev dashboard for monitoring and control",
