--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "varucli",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "description": "Dev dashboard for monitoring and control",
   "main": "src/index.js",
@@ -21,6 +21,7 @@
     "fullscreen-ink": "^0.1.0",
     "hyperswarm": "^4.7.0",
     "ink": "^4.4.1",
+    "ink-spinner": "^5.0.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
