--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "b4a": "^1.6.4",
+    "clipboardy": "^5.0.0",
     "fullscreen-ink": "^0.1.0",
     "hyperswarm": "^4.7.0",
     "ink": "^4.4.1",
